# cli-timer

./: .gitignore  README.md  pyproject.toml
src/cli_timer/: __init__.py  display.py  main.py  timer.py
tests/: test_cli.py  test_timer.py
