[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cli-timer"
version = "1.0.0"
description = "A Pomodoro CLI timer with rich terminal UI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Nripanka Das"}
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
cli-timer = "cli_timer.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
